--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
             <artifactId>guice</artifactId>
             <version>4.0</version>
         </dependency>
+        <!--Cassandra-->
         <dependency>
             <groupId>com.datastax.cassandra</groupId>
             <artifactId>cassandra-driver-core</artifactId>
@@ -35,6 +36,17 @@
             <groupId>com.datastax.cassandra</groupId>
             <artifactId>cassandra-driver-mapping</artifactId>
             <version>2.1.6</version>
+        </dependency>
+        <!--MongoDB-->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.0.0-rc0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb.morphia</groupId>
+            <artifactId>morphia</artifactId>
+            <version>1.0.1</version>
         </dependency>
     </dependencies>
 </project>
